--- a/index.html
+++ b/index.html
@@ -692,6 +692,11 @@ class DistributedAgentSystem:
                     </ul>
                 </div>
 
+                <div class="project-card">
+                    <h4>Deep Project: Fault-Tolerant Distributed Agent System</h4>
+                    <p>Build a fault-tolerant distributed agent system with advanced security features and chaos engineering capabilities.</p>
+                </div>
+
                 <h3>Day 14: Master-Level Integration Project</h3>
                 <div class="project-card">
                     <h4>Enterprise AI Agent Platform</h4>
@@ -748,9 +753,178 @@ pip install networkx python-graph-tool</code></pre>
         # Implement metacognitive reasoning
         pass</code></pre>
 
+                <h3>3. Advanced Tool System</h3>
+                <pre><code>class DynamicToolSystem:
+    def __init__(self):
+        self.tool_registry = ToolRegistry()
+        self.sandbox_manager = SandboxManager()
+        self.performance_profiler = ToolProfiler()
+    
+    async def generate_custom_tool(self, specification):
+        # Implement dynamic tool generation
+        pass</code></pre>
+
+                <h2>🎯 Deep Technical Focus Areas</h2>
+
+                <h3>1. Advanced Prompt Engineering</h3>
+                <ul>
+                    <li><strong>Temperature and Top-p Optimization</strong>: Implement dynamic parameter adjustment</li>
+                    <li><strong>Chain-of-Thought Variants</strong>: Tree of Thoughts, Graph of Thoughts, Self-Consistency</li>
+                    <li><strong>Custom Prompt Compression</strong>: Implement attention-based prompt summarization</li>
+                    <li><strong>Adversarial Prompt Defense</strong>: Build robust prompt injection detection</li>
+                </ul>
+
+                <h3>2. Custom Architecture Patterns</h3>
+                <ul>
+                    <li><strong>Mixture of Experts</strong>: Route queries to specialized sub-agents</li>
+                    <li><strong>Hierarchical Planning</strong>: Implement HTN (Hierarchical Task Network) planning</li>
+                    <li><strong>Attention Mechanisms</strong>: Custom attention for tool and memory selection</li>
+                    <li><strong>Curriculum Learning</strong>: Progressive skill acquisition for agents</li>
+                </ul>
+
+                <h3>3. Advanced Evaluation & Optimization</h3>
+                <ul>
+                    <li><strong>Custom Metrics</strong>: Implement domain-specific evaluation functions</li>
+                    <li><strong>Automated Hyperparameter Tuning</strong>: Use Optuna or custom optimization</li>
+                    <li><strong>Performance Profiling</strong>: Deep analysis of agent execution patterns</li>
+                    <li><strong>Genetic Algorithm Optimization</strong>: Evolve agent strategies automatically</li>
+                </ul>
+
+                <h3>4. Production-Scale Architecture</h3>
+                <ul>
+                    <li><strong>Microservices Architecture</strong>: Decompose agents into scalable services</li>
+                    <li><strong>Event-Driven Architecture</strong>: Implement CQRS and event sourcing</li>
+                    <li><strong>Custom Load Balancing</strong>: Intelligent routing based on agent capabilities</li>
+                    <li><strong>Auto-scaling</strong>: Dynamic resource allocation based on demand</li>
+                </ul>
+
                 <h2 id="adv-projects">🎯 Expert-Level Projects</h2>
-                <ol>
-                    <li><strong>Cognitive Architecture Agent</strong> (Days 1-2) - Explicit reasoning and metacognition</li>
-                    <li><strong>Self-Modifying Workflow System</strong> (Days 3-4) - Dynamic graph modification</li>
-                    <li><strong>Advanced Code Generation System</strong> (Days 5-6) - AST manipulation and sandboxing</li>
-                    <li><strong>Distribute
+
+                <h3>Project 1: Cognitive Architecture Agent (Days 1-2)</h3>
+                <p>Build an agent with explicit working memory, episodic memory, and metacognitive monitoring. Implement attention mechanisms for memory retrieval and custom reasoning strategies.</p>
+
+                <h3>Project 2: Self-Modifying Workflow System (Days 3-4)</h3>
+                <p>Create an agent that can analyze its own performance and modify its workflow graph dynamically. Implement performance monitoring and automatic optimization.</p>
+
+                <h3>Project 3: Advanced Code Generation System (Days 5-6)</h3>
+                <p>Build a code generation agent with custom AST manipulation, security sandboxing, and performance profiling. Include advanced debugging capabilities.</p>
+
+                <h3>Project 4: Distributed Multi-Agent System (Days 8-9)</h3>
+                <p>Implement a distributed system with consensus mechanisms, reputation systems, and emergent behavior. Use advanced coordination algorithms.</p>
+
+                <h3>Project 5: Specialized Model Integration (Days 10-11)</h3>
+                <p>Fine-tune models for specific agent tasks and build custom model serving infrastructure with advanced optimization techniques.</p>
+
+                <h3>Project 6: Enterprise Agent Platform (Day 14)</h3>
+                <p>Build a complete enterprise platform with multi-tenancy, advanced monitoring, security, and scalability features.</p>
+
+                <h2>📚 Advanced Learning Resources</h2>
+
+                <h3>Research Papers (Must Read)</h3>
+                <ul>
+                    <li>"ReAct: Synergizing Reasoning and Acting in Language Models"</li>
+                    <li>"Tree of Thoughts: Deliberate Problem Solving with Large Language Models"</li>
+                    <li>"Toolformer: Language Models Can Teach Themselves to Use Tools"</li>
+                    <li>"Multi-Agent Reinforcement Learning: A Selective Overview"</li>
+                    <li>"Constitutional AI: Harmlessness from AI Feedback"</li>
+                </ul>
+
+                <h3>Advanced Courses</h3>
+                <ul>
+                    <li>CS 294-196: Large Language Model Agents (UC Berkeley)</li>
+                    <li>CS 294-246: Foundation Models and Their Applications (UC Berkeley)</li>
+                    <li>DeepMind x UCL Deep Learning Lecture Series</li>
+                </ul>
+
+                <h3>Technical Blogs & Resources</h3>
+                <ul>
+                    <li>Anthropic Research Blog</li>
+                    <li>OpenAI Research</li>
+                    <li>Google DeepMind Publications</li>
+                    <li>Hugging Face Blog (Advanced Topics)</li>
+                    <li>Papers With Code (Agent section)</li>
+                </ul>
+
+                <h2 id="adv-assessment">🎯 Expert-Level Skills Assessment</h2>
+
+                <p>By the end of 2 weeks, you should master:</p>
+
+                <h3>Technical Depth</h3>
+                <ul>
+                    <li><strong>Custom Agent Architectures</strong>: Build agents from scratch with advanced reasoning</li>
+                    <li><strong>Memory Systems</strong>: Implement sophisticated memory architectures</li>
+                    <li><strong>Multi-Agent Coordination</strong>: Create complex coordination mechanisms</li>
+                    <li><strong>Model Integration</strong>: Fine-tune and optimize models for specific tasks</li>
+                    <li><strong>Production Systems</strong>: Build scalable, fault-tolerant agent platforms</li>
+                </ul>
+
+                <h3>Advanced Capabilities</h3>
+                <ul>
+                    <li><strong>Metacognition</strong>: Implement self-aware and self-modifying agents</li>
+                    <li><strong>Security</strong>: Build robust security measures for agent systems</li>
+                    <li><strong>Performance Optimization</strong>: Create high-performance agent systems</li>
+                    <li><strong>Research Implementation</strong>: Translate cutting-edge research into working code</li>
+                    <li><strong>System Design</strong>: Architect enterprise-level agent platforms</li>
+                </ul>
+
+                <h2>⏰ Daily Deep Work Structure</h2>
+
+                <h3>Morning (4 hours)</h3>
+                <ul>
+                    <li><strong>1-2 hours</strong>: Research paper reading and analysis</li>
+                    <li><strong>2 hours</strong>: Theory implementation and experimentation</li>
+                </ul>
+
+                <h3>Afternoon (4-5 hours)</h3>
+                <ul>
+                    <li><strong>3-4 hours</strong>: Complex project implementation</li>
+                    <li><strong>1 hour</strong>: Code review and optimization</li>
+                </ul>
+
+                <h3>Evening (1-2 hours)</h3>
+                <ul>
+                    <li><strong>30 minutes</strong>: Performance analysis and debugging</li>
+                    <li><strong>30 minutes</strong>: Writing technical documentation</li>
+                    <li><strong>30 minutes</strong>: Community engagement and knowledge sharing</li>
+                </ul>
+
+                <h2>🔧 Advanced Troubleshooting & Optimization</h2>
+
+                <h3>Performance Optimization</h3>
+                <ul>
+                    <li><strong>Memory Management</strong>: Implement custom memory pools and garbage collection</li>
+                    <li><strong>Async Optimization</strong>: Advanced asyncio patterns for concurrent execution</li>
+                    <li><strong>Caching Strategies</strong>: Multi-level caching with intelligent invalidation</li>
+                    <li><strong>Load Testing</strong>: Comprehensive performance testing under various conditions</li>
+                </ul>
+
+                <h3>Advanced Debugging</h3>
+                <ul>
+                    <li><strong>Custom Profilers</strong>: Build domain-specific profiling tools</li>
+                    <li><strong>Distributed Tracing</strong>: Implement trace correlation across agent systems</li>
+                    <li><strong>Anomaly Detection</strong>: Build ML-based anomaly detection for agent behavior</li>
+                    <li><strong>Chaos Engineering</strong>: Implement failure injection and recovery testing</li>
+                </ul>
+
+                <h2>🚀 Continuous Learning Path</h2>
+
+                <h3>Month 2-3: Specialization</h3>
+                <ul>
+                    <li>Choose specific domains (code generation, scientific reasoning, etc.)</li>
+                    <li>Implement state-of-the-art techniques from recent papers</li>
+                    <li>Contribute to open-source projects</li>
+                    <li>Build commercial-grade applications</li>
+                </ul>
+
+                <h3>Month 4-6: Research & Innovation</h3>
+                <ul>
+                    <li>Conduct original research in agent architectures</li>
+                    <li>Publish technical blog posts or papers</li>
+                    <li>Speak at conferences and meetups</li>
+                    <li>Build and lead teams implementing agent systems</li>
+                </ul>
+
+                <div class="highlight-box">
+                    <h4>🏆 Final Note</h4>
+                    <p>This advanced plan ensures your friend develops not just functional knowledge, but deep expertise that sets them apart as a true expert in agentic AI systems. The focus is on understanding fundamental principles and building everything from first principles, not just using high-level APIs.</p>
+                </div>
